--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas0"></div>
 					<div id="placar0"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas1"></div>
 					<div id="placar1"></div>
 					<div class="limpar"></div>
@@ -146,7 +148,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas2"></div>
 					<div id="placar2"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas3"></div>
 					<div id="placar3"></div>
 					<div class="limpar"></div>
@@ -155,7 +159,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas4"></div>
 					<div id="placar4"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas5"></div>
 					<div id="placar5"></div>
 					<div class="limpar"></div>
@@ -164,7 +170,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas6"></div>
 					<div id="placar6"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas7"></div>
 					<div id="placar7"></div>
 					<div class="limpar"></div>
@@ -173,7 +181,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas8"></div>
 					<div id="placar8"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas9"></div>
 					<div id="placar9"></div>
 					<div class="limpar"></div>
@@ -182,7 +192,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas10"></div>
 					<div id="placar10"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas11"></div>
 					<div id="placar11"></div>
 					<div class="limpar"></div>
@@ -191,7 +203,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas12"></div>
 					<div id="placar12"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas13"></div>
 					<div id="placar13"></div>
 					<div class="limpar"></div>
@@ -200,7 +214,9 @@
 				<div class="bloco-jogo">
 					<div id="oitavas14"></div>
 					<div id="placar14"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="oitavas15"></div>
 					<div id="placar15"></div>
 					<div class="limpar"></div>
@@ -228,7 +244,9 @@
 				<div class="bloco-jogo">
 					<div id="quartas2"></div>
 					<div id="placar22"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="quartas3"></div>
 					<div id="placar23"></div>
 					<div class="limpar"></div>
@@ -237,7 +255,9 @@
 				<div class="bloco-jogo">
 					<div id="quartas4"></div>
 					<div id="placar24"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="quartas5"></div>
 					<div id="placar25"></div>
 					<div class="limpar"></div>
@@ -246,41 +266,50 @@
 				<div class="bloco-jogo">
 					<div id="quartas6"></div>
 					<div id="placar26"></div>
-					<div class="limpar"></div>
+					<div class="limpar">
+						<p>X</p>
+					</div>
 					<div id="quartas7"></div>
 					<div id="placar27"></div>
 					<div class="limpar"></div>
 				</div>
 
-				<h3>Jogos de Semi</h3>
-
-				<div class="bloco-jogo">
-					<div id="semi0"></div>
-					<div id="placar30"></div>
-					<div class="limpar"></div>
-					<div id="semi1"></div>
-					<div id="placar31"></div>
-					<div class="limpar"></div>
-				</div>
-
-				<div class="bloco-jogo">
-					<div id="semi2"></div>
-					<div id="placar32"></div>
-					<div class="limpar"></div>
-					<div id="semi3"></div>
-					<div id="placar33"></div>
-					<div class="limpar"></div>
-				</div>
+		
 			</div>
 
 		 </div>
 		 
 		 <div class="menu">
+			<h3>Jogos de Semi</h3>
+
+			<div class="bloco-jogo">
+				<div id="semi0"></div>
+				<div id="placar30"></div>
+				<div class="limpar">
+					<p>X</p>
+				</div>
+				<div id="semi1"></div>
+				<div id="placar31"></div>
+				<div class="limpar"></div>
+			</div>
+
+			<div class="bloco-jogo">
+				<div id="semi2"></div>
+				<div id="placar32"></div>
+				<div class="limpar">
+					<p>X</p>
+				</div>
+				<div id="semi3"></div>
+				<div id="placar33"></div>
+				<div class="limpar"></div>
+			</div>
 			<h3>Jogo da final</h3>
 			<div class="bloco-jogo">
 				<div id="final0"></div>
 				<div id="placar40"></div>
-				<div class="limpar"></div>
+				<div class="limpar">
+					<p>X</p>
+				</div>
 				<div id="final1"></div>
 				<div id="placar41"></div>
 				<div class="limpar"></div>
