--- a/index.html
+++ b/index.html
@@ -315,6 +315,16 @@
 				<div class="limpar"></div>
 			</div>
 
+			<h3>Campeão</h3>
+			<div class="bloco-jogo">
+				<div id="campeao"></div>
+				<div class="limpar">
+				</div>
+				<div id="final1"></div>
+				<div id="placar41"></div>
+				<div class="limpar"></div>
+			</div>
+
 	</div>
 
 	<script src="main.js"></script>
