--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 		<select id="language" onChange="update()">
 			<option value="">Selecione a fase</option>
 			<option value="oitavas">Oitavas</option>
-			<option value="en">English</option>
-			<option value="es">Español</option>
+			<option value="quartas">Quartas</option>
 		</select>
 		<span id="botao-jogar">
 
